// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should prioritize locale correctly 1`] = `
{
  "autocomplete": false,
  "chapter": 7,
  "command": "",
  "commandArgs": {},
  "interactionToken": "",
  "locale": "kr",
}
`;

exports[`should prioritize locale correctly 2`] = `
{
  "autocomplete": false,
  "chapter": 7,
  "command": "",
  "commandArgs": {},
  "interactionToken": "",
  "locale": "jp",
}
`;

exports[`should set chapter level from spoiler config 1`] = `
{
  "autocomplete": false,
  "chapter": 7,
  "command": "",
  "commandArgs": {},
  "interactionToken": "",
  "locale": "en",
}
`;

exports[`should transform interaction into request 1`] = `
{
  "autocomplete": false,
  "chapter": 7,
  "command": "",
  "commandArgs": {
    "name": "value",
  },
  "interactionToken": "",
  "locale": "en",
}
`;
